# 0.4.12
- FIX: Minor fix to the loaded default CSS for the Fontsampler
- FIX: Updates to Twig library and polyfills after some users reported PHP conflicts
- FIX: Fix failed compile of JS asset in plugin

# 0.4.10 & 0.4.11
- (0.4.11) HOTFIX: Added missing dependency files
- FIX: Fixed saving alignment settings in admin
- FIX: Fontsamplers using the default alignment will now render correctly
- TWEAK: Updated Twig and Less libraries shipped with the plugin

# 0.4.9
- FIX: Fixed an issue where a hyphen in a font name would prevent the style from rendering correctly
- FIX: Made all font file resource requests protocol agnostic to avoid mixed content problems on misconfigured WP sites where the http/s setting differs from the saved Media Gallery file URL protocols

# 0.4.7 & 0.4.8
- FEATURE: Added 'Duplicate' button to admin UI for cloning Fontsamplers
- FIX: Fixed an issue with Media Gallery uploads prevented by Fontsampler mime type filters

# 0.4.6
- TWEAK: Bumped the PHP version requirement of Fontsampler itself to PHP 7.0.0. Do not upgrade Fontsampler unless your server supports at least PHP version 7.0.0!

# 0.4.5
- FEATURE: Introduced site-wide toggle setting to proxy file URLs, so that the physical file location is not exposed (requires using non-plain permalink setting)
- FIX: Fixed overwriting sample text dropdown texts not getting displayed correctly in the front end
- FIX: Various minor code improvements to avoid PHP notices and warnings

# 0.4.4
- FIX: Made 'init' and 'fina' Opentype Features available in the context menu for fonts that support them

# 0.4.3
- TWEAK: Improved admin interface slider responsivness and sanity checks
- TWEAK: Fixed compability with misc plugins (css class conflicts)

# 0.4.1 & 0.4.2
- TWEAK: Hotfix to suppress a debug message

# 0.4.0
- FEATURE: Implemented option for handling notdef glyphs
- FEATURE: Implemented language locale picker, which allows previewing Opentype locl substitutions